Set context auth method in enabled filter